--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <p>
     <a href="https://github.com/bdurham130" target="_blank">My GitHub</a> |
     <a href="https://github.com/bdurham130/emoji-memory-match" target="_blank">Source Code</a> |
-    <a href="https://bdurham130.github.io/emoji-memory-match/" target="_blank">DevProfile</a> |
+    <a href="https://bdurham130.github.io/Dev-Profile" target="_blank">DevProfile</a> |
     <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fbdurham130.github.io%2Femoji-memory-match%2F" target="_blank">Check Validity</a> |
     <a href="https://wave.webaim.org/report#/https://bdurham130.github.io/emoji-memory-match/" target="_blank">Accessibility Check</a>
   </p>
